--- a/03-noletal.Rmd
+++ b/03-noletal.Rmd
@@ -7,23 +7,21 @@
 
 En casos de delitos diferentes al homicidio, entre los que se encuentran: tentativa de homicidio, secuestro, desaparición forzada, violación sexual, otras agresiones sexuales, robo, agresiones, extorsión, amenaza de muerte y amenaza de agresión, llama la atención el número de víctimas reportadas en la prensa que alcanzaron un total de 1.318, de las cuales sólo en 643 casos se pudo conocer la edad y sexo de las víctimas. Puede apreciarse en el gráfico \@ref(fig:victimasodelsexoedadpir) que son las mujeres las más afectadas, sorprendentemente en los grupos etarios entre 6 y 15 años, además del grupo de 46 a 50 años. Sin duda son grupos vulnerables de este tipo de delitos, sobre todo si se trata de agresiones y violaciones sexuales, hechos que al parecer han venido en crecimiento, sobre todo en niñas, niños y adolescentes, por las condiciones de encierro que ha impuesto la pandemia por el covid-19 y que pone a las víctimas en mayor contacto y permanencia con sus agresores. Entre el sexo masculino, es el grupo entre 11 y 40 años quienes son víctimas de estos delitos, si consideramos que, por un lado, incluye a los menores quienes  también sufren agresiones y violencia sexual y los mayores que están expuestas a otros tipos de delitos producto de las actividades lícitas o ilícitas en las cuales se ven involucrados.
 
+Por información conocida por la prensa durante el primero semestre del 2021, de los 497 delitos diferentes al homicidio intencional donde se dio a conocer el tipo de delito cometido, son las agresiones graves y leves las más frecuentes (34%), seguidas del robo (27%) (Gráfico \@ref(fig:sucesosodeltipodel)). 
+
 ```{r victimasodelpiramide, results='hide',echo=FALSE,message=FALSE, warning=FALSE,cache=F}
 source("victimasodel_edadsexo_piramide.R", echo = F,local = knitr::knit_global())
 ```
-
 
 ```{r sucesosotrosdelbarras, results='hide',echo=FALSE,message=FALSE, warning=FALSE,cache=F}
 source("sucesosotrosdel_barras.R", echo = F,local = knitr::knit_global())
 ```
 
-
 ```{r victimasexodelactivpir, results='hide',echo=FALSE,message=FALSE, warning=FALSE,cache=F}
 source("victimasexodel_actividad_piramide.R", echo = F,local = knitr::knit_global())
 ```
 
-(ref:victimasodeledadsexo) Número víctimas de otros delitos distintos a homicidio intencional discriminados por edad y sexo.
-
-```{r victimasodelsexoedadpir, echo=FALSE, out.width="90%",warning=FALSE,cache=F,fig.cap = '(ref:victimasodeledadsexo)'}
+```{r victimasodelsexoedadpir, echo=FALSE, fig.width = 3, fig.asp = 0.7,out.width='90%',warning=FALSE,cache=F,fig.cap = 'Número víctimas de otros delitos distintos a homicidio intencional discriminados por edad y sexo.'}
 par(mar = c(4, 4, 0.1, 0.1))
 knitr::include_graphics(c("images/victimasodel_piramide.png"))
 # par(mar = c(4, 4, 0.1, 0.1))
@@ -31,11 +29,9 @@ knitr::include_graphics(c("images/victimasodel_piramide.png"))
 # plot(sucesospol_barras)
 ```
 
-Por información conocida por la prensa durante el primero semestre del 2021, de los 497 delitos diferentes al homicidio intencional donde se dio a conocer el tipo de delito cometido, son las agresiones graves y leves las más frecuentes (34%), seguidas del robo (27%) (Gráfico \@ref(fig:sucesosodeltipodel)). Acentuando lo descrito en el gráfico anterior en cuanto a la vulnerabilidad de grupos por sexo a ciertos delitos, además de que son delitos no letales que suelen ser cometidos por delincuencia común y que responden a la situación socioeconómica que se vive en el país. Son los delitos menos frecuentes las amenazas de agresión y las desapariciones forzadas.
+Acentuando lo descrito en el gráfico anterior en cuanto a la vulnerabilidad de grupos por sexo a ciertos delitos, además de que son delitos no letales que suelen ser cometidos por delincuencia común y que responden a la situación socioeconómica que se vive en el país. Son los delitos menos frecuentes las amenazas de agresión y las desapariciones forzadas.
 
-(ref:sucesosodeltipodelito) Número y proporción de sucesos asociados a otros delitos distintos de homicidio intencional discriminados según el tipo de delito.
-
-```{r sucesosodeltipodel, echo=FALSE, out.width="90%",warning=FALSE,cache=F,fig.cap = '(ref:sucesosodeltipodelito)'}
+```{r sucesosodeltipodel, echo=FALSE, fig.width = 3, fig.asp = 0.7,out.width='90%',warning=FALSE,cache=F,fig.cap = 'Número y proporción de sucesos asociados a otros delitos distintos de homicidio intencional discriminados según el tipo de delito.'}
 par(mar = c(4, 4, 0.1, 0.1))
 knitr::include_graphics(c("images/sucesosotrosdel_barras.png"))
 # par(mar = c(4, 4, 0.1, 0.1))
@@ -48,11 +44,9 @@ knitr::include_graphics(c("images/sucesosotrosdel_barras.png"))
 source("victimasodel_sexo_piramide.R", echo = F,local = knitr::knit_global())
 ```
 
-Esos delitos diferentes de los homicidios discriminados por sexo, permiten apreciar de acuerdo con lo reportado por la prensa durante este semestre, que tal como se mencionó en el Gráfico \@ref(fig:sucesosodeltipodel) son las agresiones los delitos más cometidos y en similar proporción en personas del sexo masculino y femenino (Gráfico \@ref(fig:victimasodelsexotipodelpir)). Pero además, los hombres son más víctimas de otros delitos como robo y tentativa de homicidio, mientras que las mujeres lo son de violación sexual, robo y otras agresiones sexuales, como ya fue mencionado, las explicaciones a este comportamiento del delito está relacionado con los roles que socialmente cumplen tanto como hombres como mujeres fuera y dentro del hogar respectivamente.
+Esos delitos diferentes de los homicidios discriminados por sexo, permiten apreciar de acuerdo con lo reportado por la prensa durante este semestre, que tal como se mencionó en el Gráfico \@ref(fig:sucesosodeltipodel) son las agresiones los delitos más cometidos y en similar proporción en personas del sexo masculino y femenino (Gráfico \@ref(fig:victimasodelsexotipodelpir)). 
 
-(ref:victimasodelsexotipodel) Número víctimas de otros delitos distintos a homicidio intencional discriminados según sexo y tipo de delito.
-
-```{r victimasodelsexotipodelpir, echo=FALSE, out.width="90%",warning=FALSE,cache=F,fig.cap = '(ref:victimasodelsexotipodel)'}
+```{r victimasodelsexotipodelpir, echo=FALSE, fig.width = 3, fig.asp = 0.7,out.width='90%',warning=FALSE,cache=F,fig.cap = 'Número víctimas de otros delitos distintos a homicidio intencional discriminados según sexo y tipo de delito.'}
 par(mar = c(4, 4, 0.1, 0.1))
 knitr::include_graphics(c("images/victimasexotrosdel_graf.png"))
 # par(mar = c(4, 4, 0.1, 0.1))
@@ -60,11 +54,11 @@ knitr::include_graphics(c("images/victimasexotrosdel_graf.png"))
 # plot(sucesospol_barras)
 ```
 
+Pero además, los hombres son más víctimas de otros delitos como robo y tentativa de homicidio, mientras que las mujeres lo son de violación sexual, robo y otras agresiones sexuales, como ya fue mencionado, las explicaciones a este comportamiento del delito está relacionado con los roles que socialmente cumplen tanto como hombres como mujeres fuera y dentro del hogar respectivamente.
+
 De las víctimas de delitos distintos al homicidio, en el caso de los hombres, son fundamentalmente trabajadores, y en menor proporción estudiantes (Gráfico \@ref(fig:victimasodelsexoactivpir)). Son las mujeres estudiantes las más afectadas por este tipo de delitos y menor número de trabajadoras. Este comportamiento del delito de acuerdo con el tipo de víctima parece responder a los factores de riesgo y a la vulnerabilidad de estos grupos para ser escogidos por sus agresores. A los factores de riesgo en el caso de las mujeres estudiantes porque, por lo general, son grupos jóvenes que se mueven en espacios abiertos bien en su centro de estudio, como en espacios de traslado que las hace vulnerable a la delincuencia común para ser despojadas de sus pertenencias y ser agredidas sexualmente. En el caso de los hombres se trata de hombres trabajadores que son vulnerables de delitos tanto en los lugares del trayecto a sus sitios de trabajo desde su casa y viceversa, y a las posibilidades de ser privados de pertenencias y dinero producto de su trabajo.
 
-(ref:victimasodelsexoactiv) Número víctimas de otros delitos distintos a homicidio intencional discriminados según sexo y actividad a la que se dedica la víctima.
-
-```{r victimasodelsexoactivpir, echo=FALSE, out.width="90%",warning=FALSE,cache=F,fig.cap = '(ref:victimasodelsexoactiv)'}
+```{r victimasodelsexoactivpir, echo=FALSE, fig.width = 3, fig.asp = 0.7,out.width='90%',warning=FALSE,cache=F,fig.cap = 'Número víctimas de otros delitos distintos a homicidio intencional discriminados según sexo y actividad a la que se dedica la víctima.'}
 par(mar = c(4, 4, 0.1, 0.1))
 knitr::include_graphics(c("images/victimasexodelactiv_graf.png"))
 # par(mar = c(4, 4, 0.1, 0.1))
@@ -92,9 +86,7 @@ source("victimasagresiondel_sexo_piramide.R", echo = F,local = knitr::knit_globa
 source("victimasagresiondel_sexodonde_piramide.R", echo = F,local = knitr::knit_global())
 ```
 
-(ref:victimasagresiondelsexomotiv) Número víctimas de agresión discriminados según sexo y la motivación del delito.
-
-```{r victimasagresiondelmotivpir, echo=FALSE, out.width="90%",warning=FALSE,cache=F,fig.cap = '(ref:victimasagresiondelsexomotiv)'}
+```{r victimasagresiondelmotivpir, echo=FALSE, fig.width = 3, fig.asp = 0.7,out.width='90%',warning=FALSE,cache=F,fig.cap = 'Número víctimas de agresión discriminados según sexo y la motivación del delito.'}
 par(mar = c(4, 4, 0.1, 0.1))
 knitr::include_graphics(c("images/victimasagresiondelmotiv_pir.png"))
 # par(mar = c(4, 4, 0.1, 0.1))
@@ -104,9 +96,7 @@ knitr::include_graphics(c("images/victimasagresiondelmotiv_pir.png"))
 
 Como se ha venido afirmando, de acuerdo con los roles socialmente desempeñados por ambos sexos, el Gráfico \@ref(fig:victimasagresiondeldondepir) muestra como las mujeres son víctimas de delitos diferentes de homicidio fundamentalmente en el hogar, mientras que los hombres están más expuestos a delitos en espacios abiertos o en la calle. Aunque el hogar y las prisiones o instituciones penales son lugares donde también los hombres son victimizados. Esto obviamente responde a que el espacio del delito en el caso de las mujeres es el sitio donde fundamentalmente ejercen sus funciones de ama de casa, madre, esposa, e incluso dada la pandemia hay quienes han llevado su trabajo remunerado a casa, lo que las hace susceptible de ser víctimas de delitos en el hogar. Eso sin mencionar que si otros miembros de la familia llevan también su trabajo a casa, lo hace un espacio posible para conflictos intrafamiliares que terminan en violencia. El sexo masculino por su parte, es quien mayormente ejerce su trabajo fuera de casa, en espacios abiertos y está expuesto a las motivaciones de delincuentes o bandas de delincuenciales, incluso de organismos policiales. 
 
-(ref:victimasagresiondelsexodonde) Número víctimas de agresión discriminados según sexo y por el lugar donde ocurrió el delito.
-
-```{r victimasagresiondeldondepir, echo=FALSE, out.width="90%",warning=FALSE,cache=F,fig.cap = '(ref:victimasagresiondelsexodonde)'}
+```{r victimasagresiondeldondepir, echo=FALSE, fig.width = 3, fig.asp = 0.7,out.width='90%',warning=FALSE,cache=F,fig.cap = 'Número víctimas de agresión discriminados según sexo y por el lugar donde ocurrió el delito.'}
 par(mar = c(4, 4, 0.1, 0.1))
 knitr::include_graphics(c("images/victimasagresiondonde_grafico.png"))
 # par(mar = c(4, 4, 0.1, 0.1))
