--- a/index.Rmd
+++ b/index.Rmd
@@ -2,14 +2,14 @@
 
 --- 
 title: "Boletín primer semestre de 2021"
-author: "Observatorio Venezolano de Violencia"
+author: "LACSO-OVV"
 date: ""
 site: bookdown::bookdown_site
 output: bookdown::gitbook
 documentclass: book
 bibliography: [book.bib, packages.bib]
 biblio-style: apalike
-csl: apa-5th-edition.csl
+csl: apa.csl
 link-citations: yes
 github-repo: rstudio/bookdown-demo
 description: ""
@@ -25,7 +25,7 @@ library(officer)
 
 ![](images/PORTADA_BOLETIN_ADRIAN.jpg)
 
-# Observatorio Venezolano de Violencia {-}
+# LACSO-OVV {-}
 
 
 
