--- a/02-violencialetal.Rmd
+++ b/02-violencialetal.Rmd
@@ -7,10 +7,34 @@
 
 <!---BLOCK_MULTICOL_START--->
 
+```{r victimasdelhiestados, results='hide',echo=FALSE,message=FALSE, warning=FALSE,cache=F}
+source("victimasdelhi_estados_barras.R", echo = F,local = knitr::knit_global())
+
+```
+
+```{r victimasdelhiestadosbarras, echo=FALSE, fig.width = 3, fig.asp = 0.7,out.width='90%',warning=FALSE,cache=F,fig.cap = 'Número de víctimas por homicidio intencional discriminadas según la entidad federal donde la cobertura mediática registro el suceso.'}
+par(mar = c(4, 4, 0.1, 0.1))
+knitr::include_graphics(c("images/victimasdelhiestados_barras.png"))
+# par(mar = c(4, 4, 0.1, 0.1))
+# plot(a)
+# plot(sucesospol_barras)
+```
+
+```{r fig.align='center', echo=FALSE, include=identical(knitr:::pandoc_to(), 'html')}
+knitr::kable(
+  tabla_victimasdelhiestados,booktabs = T,align = "lcr",
+  caption = "Número de víctimas por homicidio intencional discriminadas según la entidad federal donde la cobertura mediatica registro el suceso.")
+```
+
+```{r ft.align="center", tab.cap='Número de víctimas por homicidio intencional discriminadas según la entidad federal donde la cobertura mediática registro el suceso.', tab.id='tab1', label='tab1'}
+tabla_victimasdelhiestados
+```
+
 Entendiendo el homicidio intencional como la “muerte ilícita causada a una persona con la intención de causarle la muerte u ocasionarle lesiones graves” [@UNODC2015,19], no cabe duda de que este delito sigue siendo de los más graves que se cometen y son reportados por la prensa consultada. Para este primer semestre del año 2021 la prensa nacional y regional consultada, registró un total de 652 muertes por homicidio intencional, de los cuales sólo se tuvo información sobre edad y sexo en 468 casos. 
 
 ```{r victimasmilpiramide, results='hide',echo=FALSE,message=FALSE, warning=FALSE,cache=F}
 source("victimasmil_edadsexo_piramide.R", echo = F,local = knitr::knit_global())
+
 ```
 
 ```{r victimasdelhipiramide, results='hide',echo=FALSE,message=FALSE, warning=FALSE,cache=F}
