--- a/index.Rmd
+++ b/index.Rmd
@@ -13,24 +13,26 @@ csl: apa.csl
 link-citations: yes
 github-repo: rstudio/bookdown-demo
 description: ""
-cover-image: "images/PORTADA_BOLETIN_SEMESTRAL2.jpg"
+cover-image: "images/PORTADA_BOLETIN_SEMESTRAL3.jpg"
 
 ---
 
 ```{r officedown, include=FALSE}
+knitr::opts_chunk$set(echo = FALSE)
 library(officedown)
 library(officer)
+library(flextable)
 
 ```
 
-![](images/PORTADA_BOLETIN_SEMESTRAL2.jpg)
+![](images/PORTADA_BOLETIN_SEMESTRAL3.jpg)
 
 # LACSO-OVV {-}
 
 
 
 ```{r fig.align='center', echo=FALSE, include=identical(knitr:::pandoc_to(), 'html'), fig.link='https://observatoriodeviolencia.org.ve/news/informe-semestral-regional-de-violencia-2021-guarico/'}
-knitr::include_graphics('images/PORTADA_BOLETIN_SEMESTRAL2.jpg', dpi = NA)
+knitr::include_graphics('images/PORTADA_BOLETIN_SEMESTRAL3.jpg', dpi = NA)
 ```
 
 ```{r victimasdelhiedadsexo, results='hide',echo=FALSE,message=FALSE, warning=FALSE,cache=F}
