--- a/02-violencialetal.Rmd
+++ b/02-violencialetal.Rmd
@@ -73,6 +73,29 @@ knitr::include_graphics(c("images/victimasdelhimotiv_graf.png"))
 
 <!---BLOCK_MULTICOL_START--->
 
+```{r victimasmilestados, results='hide',echo=FALSE,message=FALSE, warning=FALSE,cache=F}
+source("victimasmil_estados_barras.R", echo = F,local = knitr::knit_global())
+
+```
+
+```{r victimasmilestadosbarras, echo=FALSE, fig.width = 3, fig.asp = 0.7,out.width='90%',warning=FALSE,cache=F,fig.cap = 'Número de víctimas por intervención policial discriminadas según la entidad federal donde la cobertura mediática registro el suceso.'}
+par(mar = c(4, 4, 0.1, 0.1))
+knitr::include_graphics(c("images/victimasmilestados_barras.png"))
+# par(mar = c(4, 4, 0.1, 0.1))
+# plot(a)
+# plot(sucesospol_barras)
+```
+
+```{r fig.align='center', echo=FALSE, include=identical(knitr:::pandoc_to(), 'html')}
+knitr::kable(
+  tabla_victimasmilestados,booktabs = T,align = "lcr",
+  caption = "Número de víctimas por intervención policial discriminadas según la entidad federal donde la cobertura mediatica registro el suceso.")
+```
+
+```{r ft.align="center", tab.cap='Número de víctimas por intervención policial discriminadas según la entidad federal donde la cobertura mediática registro el suceso.', tab.id='tab2', label='tab2'}
+tabla_victimasmilestados
+```
+
 Las muertes por intervención policial informadas durante el primer semestre  del 2021, en los reportes de prensa consultados, alcanzan un total de 562 víctimas (gráfico \@ref(fig:victimasmilsexoedadpir)). Sin embargo, de ese total la prensa solo mencionó en 207 casos información de edad y sexo de las víctimas, entre las cuales 60 son de sexo masculino, en edades comprendidas entre 20 y 30 años, aunque llama la atención que también se reportaron víctimas de menos de un año y de 70 años, que, aunque en mucha menor proporción, intriga la muerte de varones de esas edades en manos de la policía. La muerte de mujeres por funcionarios policiales es mucho menor que los hombres, siendo las víctimas mayores de 20 años las más afectadas. 
 
 ```{r sucesospolbarras, results='hide',echo=FALSE,message=FALSE, warning=FALSE,cache=F}
